# rue-old

./: Cargo.toml  main.rue  output.clsp  standard.rue
crates/rue-ast/: Cargo.toml
crates/rue-ast/src/: block.rs  expr.rs  item.rs  lib.rs  path.rs  program.rs  scope.rs  stmt.rs  ty.rs
crates/rue-ast/src/expr/: binary_expr.rs  call_expr.rs  if_expr.rs  literal_expr.rs  prefix_expr.rs
crates/rue-ast/src/item/: fn_def.rs  fn_item.rs  function_item.rs  use_item.rs
crates/rue-ast/src/item/fn_def/: fn_param.rs  fn_param_list.rs
crates/rue-ast/src/item/fn_item/: fn_param.rs  fn_param_list.rs
crates/rue-ast/src/item/function_item/: function_param.rs  function_param_list.rs
crates/rue-ast/src/stmt/: let_stmt.rs
crates/rue-compiler/: Cargo.toml
crates/rue-compiler/src/: codegen.rs  database.rs  hir.rs  lib.rs  lir.rs  scope.rs  symbol.rs  ty.rs
crates/rue-error/: Cargo.toml
crates/rue-error/src/: lib.rs  text_pos.rs  text_range.rs
crates/rue-hir/: Cargo.toml
crates/rue-hir/src/: block.rs  database.rs  expr.rs  hir.rs  item.rs  lib.rs  lowerer.rs  program.rs  scope.rs  symbol.rs  ty.rs  value.rs
crates/rue-lexer/src/: lexer.rs  lib.rs  token.rs  token_kind.rs
crates/rue-lir/: Cargo.toml
crates/rue-lir/src/: lib.rs  lir.rs
crates/rue-lsp/: Cargo.toml
crates/rue-lsp/src/: main.rs
crates/rue-parser/: Cargo.toml
crates/rue-parser/src/: ast.rs  error.rs  grammar.rs  lib.rs  output.rs  parser.rs
crates/rue-parser/src/grammar/: expr.rs  item.rs  path.rs  stmt.rs  ty.rs
crates/rue-syntax/: Cargo.toml
crates/rue-syntax/src/: language.rs  syntax_kind.rs
src/: ast.rs  lang.rs  lexer.rs  main.rs  output.rs  parser.rs  syntax_kind.rs  token.rs  token_kind.rs
