[workspace]
members = ["crates/*"]

[package]
name = "rue"
version = "0.1.0"
edition = "2021"

[dependencies]
clvmr = "0.3.0"
num-derive = "0.4.0"
num-traits = "0.2.15"
rowan = "0.15.11"
rue-error = { version = "0.1.0", path = "./crates/rue-error" }
rue-parser = { version = "0.1.0", path = "./crates/rue-parser" }
rue-ast = { version = "0.1.0", path = "./crates/rue-ast" }
rue-hir = { version = "0.1.0", path = "./crates/rue-hir" }
rue-lir = { version = "0.1.0", path = "./crates/rue-lir" }
rue-compiler = { version = "0.1.0", path = "./crates/rue-compiler" }
hex = "0.4.3"
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
