[package]
name = "rue-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
rowan = "0.15.11"
rue-lexer = { version = "0.1.0", path = "../rue-lexer" }
rue-syntax = { version = "0.1.0", path = "../rue-syntax" }
rue-error = { version = "0.1.0", path = "../rue-error" }
indexmap = "2.0.1"

[dev-dependencies]
expect-test = "1.4.1"
